add project reference

--- a/src/LeaveDayAPI.HttpApi/LeaveDayAPI.HttpApi.csproj
+++ b/src/LeaveDayAPI.HttpApi/LeaveDayAPI.HttpApi.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LeaveDayAPI.Application.Contracts\LeaveDayAPI.Application.Contracts.csproj" />
+    <ProjectReference Include="..\LeaveDayAPI.EntityFrameworkCore\LeaveDayAPI.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
