--- a/src/LeaveDayAPI.EntityFrameworkCore/LeaveDayAPI.EntityFrameworkCore.csproj
+++ b/src/LeaveDayAPI.EntityFrameworkCore/LeaveDayAPI.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <ProjectReference Include="..\LeaveDayAPI.Domain\LeaveDayAPI.Domain.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="7.4.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.EntityFrameworkCore" Version="7.4.1" />
