--- a/src/LeaveDayAPI.DbMigrator/appsettings.json
+++ b/src/LeaveDayAPI.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=qrepro-db.database.windows.net;Initial Catalog=LeaveRequestAPI;Persist Security Info=True;User ID=qrepro_admin;Password=nhom9_mobile"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=LeaveDayAPI;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
