--- a/src/LeaveDayAPI.HttpApi.Host/appsettings.json
+++ b/src/LeaveDayAPI.HttpApi.Host/appsettings.json
@@ -5,7 +5,7 @@
     "RedirectAllowedUrls": ""
   },
   "ConnectionStrings": {
-    "Default": "Data Source=qrepro-db.database.windows.net;Initial Catalog=LeaveRequestAPI;Persist Security Info=True;User ID=qrepro_admin;Password=nhom9_mobile"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=LeaveDayAPI;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44381",
