re-fracture code to test

--- a/test/LeaveDayAPI.Domain.Tests/LeaveDayAPI.Domain.Tests.csproj
+++ b/test/LeaveDayAPI.Domain.Tests/LeaveDayAPI.Domain.Tests.csproj
@@ -9,11 +9,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\LeaveDayAPI.Domain\LeaveDayAPI.Domain.csproj" />
     <ProjectReference Include="..\LeaveDayAPI.EntityFrameworkCore.Tests\LeaveDayAPI.EntityFrameworkCore.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="LeaveRequest\" />
   </ItemGroup>
 
 </Project>
