--- a/test/LeaveDayAPI.EntityFrameworkCore.Tests/LeaveDayAPI.EntityFrameworkCore.Tests.csproj
+++ b/test/LeaveDayAPI.EntityFrameworkCore.Tests/LeaveDayAPI.EntityFrameworkCore.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\LeaveDayAPI.Domain\LeaveDayAPI.Domain.csproj" />
     <ProjectReference Include="..\..\src\LeaveDayAPI.EntityFrameworkCore\LeaveDayAPI.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\LeaveDayAPI.TestBase\LeaveDayAPI.TestBase.csproj" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.Sqlite" Version="7.4.1" />
