--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -1,14 +1,13 @@
 name: CI
 
 on:
-  push:
+  pull_request:
     branches:
-      - dev
+      - master
 
 jobs:
   build:
-    runs-on: 
-      -  self-hosted
+    runs-on: self-hosted
 
     steps:
     - name: Checkout repository
