--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up .NET Core
-      uses: actions/setup-dotnet@v5
+      uses: actions/setup-dotnet@latest
       with:
-        dotnet-version: '5.0.x'
+        dotnet-version: '7.0.x'
    
     - name: Add nuget.org as nuget package source
       run: dotnet nuget add source https://api.nuget.org/v3/index.json --name nuget.org
