--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -1,9 +1,7 @@
 name: CI
 
 on:
-  pull_request:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up .NET Core
-      uses: actions/setup-dotnet@latest
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '7.0.x'
    
