--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     strategy:
       matrix:
-        dotnet-version: [ '5.0.x', '7.0.x' ]
+        dotnet-version: ['7.0.x']
 
     steps:
     - name: Checkout repository
