fix typo CI pipeline

--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -20,7 +20,7 @@ jobs:
         path: |
           ~/.nuget/packages
           **/*.sln
-        key: nuget-${{ runner.os }}-${{ hashFiles('**/*.csproj') }
+        key: nuget-${{ runner.os }}-${{ hashFiles('**/*.csproj') }}
         restore-keys: |
             nuget-${{ runner.os }}-
     
