--- a/src/LeaveDayAPI.DbMigrator/appsettings.json
+++ b/src/LeaveDayAPI.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=LeaveDayAPI;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=DESKTOP-KNUIG34;Database=LeaveDayAPI;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
