update cd pipeline

--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -57,6 +57,11 @@ jobs:
         name: test-results
         path: '**/*.trx'
 
+name: CD
+
+on:
+  workflow_dispatch:
+
 jobs:
   deploy:
     runs-on: self-hosted
