--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI-CD
 
 on:
   workflow_dispatch:
@@ -56,8 +56,6 @@ jobs:
       with:
         name: test-results
         path: '**/*.trx'
-
-name: CD
 
 on:
   workflow_dispatch:
