--- a/.github/workflows/CI_dotnet.yml
+++ b/.github/workflows/CI_dotnet.yml
@@ -70,12 +70,5 @@ jobs:
 
     - name: Deploy
       run: |
-        # Gracefully recycle the IIS application pool
-        Stop-WebAppPool -Name "leave-day-services"
-        Start-Sleep -s 5  # Wait for a few seconds for the application pool to stop
-        
-        # Copy files to the deployment directory
-        robocopy ${{ github.workspace }}/published-app C:\inetpub\wwwroot\leave-day-services /E /MIR /NFL /NDL /NJH /NJS /nc /ns /np
-
-        # Restart the IIS application pool
-        Start-WebAppPool -Name "leave-day-services"
+        # Run the entire script with elevated privileges
+        Start-Process powershell -ArgumentList "-NoProfile -ExecutionPolicy Bypass -File deploy-script.ps1" -Verb RunAs
